[package]
name = "gofer"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.98"
async-trait = "0.1.88"
base64 = "0.22.1"
bollard = "0.18.1"
bytes = "1.10.1"
chrono = "0.4.41"
chrono-humanize = "0.2.3"
clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
colored = "3.0.0"
comfy-table = "7.1.4"
dashmap = "6.1.0"
dirs = "6.0.0"
dropshot = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.15.1" }
dropshot_endpoint = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.15.1" }
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.31"
gofer_sdk = { path = "../sdk/rust" }
http = "1.3.1"
human-panic = "2.0.2"
hyper = { version = "1.6.0", features = ["server", "full"] }
lazy-regex = "3.4.1"
mime_guess = "2.0.5"
polyfmt = { git = "https://github.com/clintjedwards/polyfmt-rs.git", tag = "v0.0.13" }
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
    "stream"
], default-features = false }
rstest = "0.25.0"
rust-embed = "8.7.1"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite"] }
strum = { version = "0.27", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tungstenite = "0.26.2"
uuid = { version = "1.16.0", features = ["v7"] }
semver = "1.0.26"
libc = "0.2.172"
object_store = "0.12.0"
tokio-stream = "0.1.17"
http-body-util = "0.1.3"
tokio-util = "0.7.15"

[dev-dependencies]
lazy_static = "1.5.0"
tempfile = "3.19.1"
pretty_assertions = "1.4.1"

[[bin]]
name = "gofer"
path = "src/main.rs"

[[bin]]
name = "generate_openapi"
path = "src/generate_openapi.rs"
