[package]
name = "gofer"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bollard = "0.18"
bytes = "1.10"
chrono = "0.4"
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
colored = "3.0"
comfy-table = "7.1"
dashmap = "6.1"
dirs = "6.0"
dropshot = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.15.1" }
dropshot_endpoint = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.15.1" }
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
gofer_sdk = { path = "../sdk/rust" }
http = "1.3"
human-panic = "2.0"
hyper = { version = "1.6", features = ["server", "full"] }
lazy-regex = "3.4"
mime_guess = "2.0"
polyfmt = { git = "https://github.com/clintjedwards/polyfmt-rs.git", tag = "v0.0.13" }
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "stream"
], default-features = false }
rstest = "0.25"
rust-embed = "8.7"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
strum = { version = "0.27", features = ["derive"] }
tera = "1.20"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tungstenite = "0.26"
uuid = { version = "1.16", features = ["v7"] }
semver = "1.0"
libc = "0.2"
object_store = "0.12"
tokio-stream = "0.1"
http-body-util = "0.1"
tokio-util = "0.7"

[dev-dependencies]
lazy_static = "1.5"
tempfile = "3.19"
pretty_assertions = "1.4"

[[bin]]
name = "gofer"
path = "src/main.rs"

[[bin]]
name = "generate_openapi"
path = "src/generate_openapi.rs"
