[package]
name = "gofer_types"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.88"
dropshot = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.11.0" }
dropshot_endpoint = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.11.0" }
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
strum = { version = "0.26.3", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v7"] }
