[package]
name = "gofer_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
gofer_proto = { path = "../../gofer_proto" }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
lazy-regex = "2.3.0"
thiserror = "1.0.31"
prost = "0.10.0"
tonic = { version = "0.7.1", features = ["tls", "transport", "tls-roots"] }

[build-dependencies]
tonic-build = "0.7.0"
