[package]
name = "gofer_sdk"
version = "0.9.1"
edition = "2021"
description = "The SDK for Gofer: https://github.com/clintjedwards/gofer. Helps with creating extensions and pipelines."
documentation = "https://clintjedwards.com/gofer"
license = "MPL-2.0"
homepage = "https://clintjedwards.com/gofer"
repository = "https://github.com/clintjedwards/gofer"
readme = "../../README.md"
keywords = ["ci", "cd", "gofer", "pipeline", "cron", "execution", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait = "0.1.88"
anyhow = "1.0.98"
base64 = "0.22.1"
dropshot = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.15.1" }
dropshot_endpoint = { git = "https://github.com/clintjedwards/dropshot.git", tag = "v0.11.0-dev" }
futures = "0.3"
http = "1.3.1"
lazy-regex = "3.4.1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", tag = "v0.9.1" }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slog = "2.7.0"
slog-async = "2.8.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45.0"
tracing = "0.1.41"
hyper = { version = "1.6.0", features = ["server", "full"] }
semver = "1.0.26"

[[bin]]
name = "generate_openapi_sdk"
path = "src/generate_openapi.rs"
